push preliminary schedule after the venue confirmed our booking

--- a/docs/meetings/snt2025.md
+++ b/docs/meetings/snt2025.md
@@ -14,9 +14,9 @@
 
 <iframe src="https://www.google.com/maps/d/u/1/embed?mid=13phgksWZd3I-MpJkVYDJ_u4piRx27uw&ehbc=2E312F&noprof=1" width=100% height="480"></iframe>
 
-## Travel information
+## Travel Information
 
-### Travelling by car
+### Travelling by Car
 
 When travelling by car to Košice, you will most likely need to use the speedway. You can [buy a vignette on the official website](https://eznamka.sk/en). You can park at one of the parking lots adjacent to the dormitory free of charge (they are marked on the map).
 
@@ -27,7 +27,7 @@ When driving from the Czech Republic or Austria, you will pass by numerous landm
  - [High Tatras](https://maps.app.goo.gl/t4Bm4GW79ow354cK9) - great for hiking, accessible by car mostly
  - [Spiš Castle](https://maps.app.goo.gl/xpjg7zL69RuHa4rz9) - large fortress ruins, next to the road
 
-### Travelling by plane
+### Travelling by Plane
 
 The city of Košice has its own [international airport](https://www.airportkosice.sk/en). Check-in and boarding times are usually really quick since the airport is small. Regular flights are operated to:
 
@@ -40,7 +40,7 @@ Multiple low-cost airlines are flying to Košice. If you are flying from farther
 
 The airport is connected to the city by regular public transportation buses, which are operating only once an hour. An alternative is to use available taxi services (Uber or Bolt). There are usually taxi drivers standing at the airport, offering rides – you can take a ride with them; the cost when going to the venue should be around 6€, but they will usually ask for more (you can haggle them down to 10€, which is still a lot but manageable; anything over 10€ is a SCAM).
 
-### Travelling by train
+### Travelling by Train
 
 The city of Košice is accessible by train from several directions – mainly from Budapest, Bratislava (Vienna by connecting train) and Prague. You can find relevant timetables for trains on CP APP - [Google Play](https://play.google.com/store/apps/details?id=cz.chaps.cpsk&pcampaignid=web_share) & [App Store](https://apps.apple.com/us/app/cestovn%C3%A9-poriadky-cp/id1054934213). If you set your device to the English language, it should switch to English by default.
 
@@ -56,7 +56,7 @@ You can get from Vienna to Bratislava by quick InterCity train and from Bratisla
 
 Here, options are more available. Firstly, there are several trains a day operated by carrier [RegioJet](https://regiojet.com/) which have better comfort, service quality & price (+ food & drinks on board are not overpriced). They also operate a sleeper version of this train, which is not that much cheaper compared to the national carrier. Secondly, the Czech national carrier operates the train SuperCity Pendolino Košičan, which is the highest priority train during the day and has great ride comfort. Lastly, there are also trains operated by Slovak National Railways, which are both regular and sleeper. Sleeper versions of Slovak trains are reasonably priced (more expensive than planes, though) and reasonably equipped, although don't expect showers or soft mattresses.
 
-### Public transportation in city of Košice
+### Public Transportation in the City of Košice
 
 Public transportation in the city of Košice is available to be used when necessary. Timetables can be found on regular Google Maps, Apple Maps, or on the aforementioned CP APP (scroll down in the dropdown menu and select "MHD Košice"). All of the relevant bus lines are marked on the map, with highlighted bus stops which they stop on. I personally recommend using trams, which are the fastest way of public transportation around the city. If the tram has the letter **R** in its name, it means that it is a special connection, usually faster.
 
@@ -76,3 +76,6 @@ The room will be equipped with 4 beds, 4 wardrobes, a small fridge and table spa
 
 ## Schedule (Preliminary, subject to change)
 
+This is rough schedule for participants, which will become more detailed as we move closer to the event and tours or presentations get booked and arranged.
+
+<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FPrague&showPrint=0&mode=AGENDA&title=SNT%202025%20Preliminary%20Programme&src=ODMwMGIxODgxNjVhMjM4ODQ2YzRkMWEyMGIwNTQxZmY3YmJhMzE3MGViNzJhYTkwOTE0OWIxMGI1MDA0ZmE3ZkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%233f51b5" style="border:solid 1px #777" width=100% height="600" frameborder="0" scrolling="no"></iframe>
